update msr paper

--- a/content/publication/leveraging-gpt-like-llms-to-automate-issue-labeling/cite.bib
+++ b/content/publication/leveraging-gpt-like-llms-to-automate-issue-labeling/cite.bib
@@ -6,4 +6,7 @@
   volume={},
   number={},
   pages={},
-  doi={10.1145/3643991.3644903}}
+  doi={10.1145/3643991.3644903},
+  location = {Lisbon, Portugal},
+  url = {https://doi.org/10.1145/3528588.3528659}
+  }
