update doi for msr paper

--- a/content/publication/colavito-2024-b/cite.bib
+++ b/content/publication/colavito-2024-b/cite.bib
@@ -8,5 +8,6 @@
  pages = {469--480},
  title = {Leveraging GPT-like LLMs to Automate Issue Labeling},
  urldate = {2024-07-07},
- year = {2024}
+ year = {2024},
+ doi = {10.1145/3643991.3644903}
 }
