--- a/publications.bib
+++ b/publications.bib
@@ -56,18 +56,24 @@
   keywords = {BERT,GitHub,Issue labeling,Issue trackers,Label correctness,Model quality},
 }
 
-@inproceedings{Colavito-2024b,
-  title = {Leveraging {{GPT-like LLMs}} to {{Automate Issue Labeling}}},
-  booktitle = {2024 {{IEEE}}/{{ACM}} 21st {{International Conference}} on {{Mining Software Repositories}} ({{MSR}})},
-  author = {Colavito, Giuseppe and Lanubile, Filippo and Novielli, Nicole and Quaranta, Luigi},
-  year = {2024},
-  month = apr,
-  pages = {469--480},
-  issn = {2574-3864},
-  urldate = {2024-07-07},
-  abstract = {Issue labeling is a crucial task for the effective management of software projects. To date, several approaches have been put forth for the automatic assignment of labels to issue reports. In particular, supervised approaches based on the fine-tuning of BERT-like language models have been proposed, achieving state-of-the-art performance. More recently, decoder-only models such as GPT have become prominent in SE research due to their surprising capabilities to achieve state-of-the-art performance even for tasks they have not been trained for. To the best of our knowledge, GPT-like models have not been applied yet to the problem of issue classification, despite the promising results achieved for many other software engineering tasks. In this paper, we investigate to what extent we can leverage GPT-like LLMs to automate the issue labeling task. Our results demonstrate the ability of GPT-like models to correctly classify issue reports in the absence of labeled data that would be required to fine-tune BERT-like LLMs.CCS CONCEPTS{$\bullet$} Software and its engineering {$\rightarrow$} Documentation; Software evolution; Maintaining software; {$\bullet$} Information systems {$\rightarrow$} Clustering and classification;},
-  keywords = {Annotations,Computational modeling,Data models,GPT,Issue Labeling,Labeling Unstructured Data,LLM,Manuals,Scalability,Software,Software Maintenance and Evolution,Supervised learning}
+@inproceedings{Colavito_2024b,
+	title        = {Leveraging GPT-like LLMs to Automate Issue Labeling},
+	author       = {Colavito, Giuseppe and Lanubile, Filippo and Novielli, Nicole and Quaranta, Luigi},
+	year         = 2024,
+	booktitle    = {Proceedings of the 21st International Conference on Mining Software Repositories},
+	location     = {Lisbon, Portugal},
+	publisher    = {Association for Computing Machinery},
+	address      = {New York, NY, USA},
+	series       = {MSR '24},
+	pages        = {469–480},
+	doi          = {10.1145/3643991.3644903},
+	isbn         = 9798400705878,
+	url          = {https://doi.org/10.1145/3643991.3644903},
+	abstract     = {Issue labeling is a crucial task for the effective management of software projects. To date, several approaches have been put forth for the automatic assignment of labels to issue reports. In particular, supervised approaches based on the fine-tuning of BERT-like language models have been proposed, achieving state-of-the-art performance. More recently, decoder-only models such as GPT have become prominent in SE research due to their surprising capabilities to achieve state-of-the-art performance even for tasks they have not been trained for. To the best of our knowledge, GPT-like models have not been applied yet to the problem of issue classification, despite the promising results achieved for many other software engineering tasks. In this paper, we investigate to what extent we can leverage GPT-like LLMs to automate the issue labeling task. Our results demonstrate the ability of GPT-like models to correctly classify issue reports in the absence of labeled data that would be required to fine-tune BERT-like LLMs.},
+	numpages     = 12,
+	keywords     = {LLM, issue labeling, GPT, software maintenance and evolution, labeling unstructured data}
 }
+
 
 @inproceedings{Novielli-2024a,
   title = {{{QualAI}}: {{Continuous Quality Improvement}} of {{AI-based Systems}}.},
